flatten structure, auto-schema, simplify enums & clean up legacy code